examples/python-web-app/path-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example-1
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: python-django-sample-app
            port:
              number: 80
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: python-django-sample-app
            port:
              number: 80
